welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:1: error: Missing closing brace `}' assumed here
def finpos():Boolean = {var b = false
^SnakeBuggle:1: error: expected class or object definition
def finpos():Boolean = {var b = false
^SnakeBuggle:7: error: expected class or object definition
def avPS() {if (estFaceMur()) {
^